--- a/location.html
+++ b/location.html
@@ -96,11 +96,14 @@
             </li>
         </ul>
     </div>
-    <iframe
+    <div style="height: 672px; ">
+        <iframe
         src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d6325.362896252178!2d126.91709304722015!3d37.56256829279774!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x357c98e8a188c921%3A0x2867c048a51f364b!2z7ISc7Jq47Yq567OE7IucIOuniO2PrOq1rCDsl7Drgqjrj5k!5e0!3m2!1sko!2skr!4v1683095388083!5m2!1sko!2skr"
         width="100%" height="672" style="border:0;" allowfullscreen="" loading="lazy"
         referrerpolicy="no-referrer-when-downgrade" class="location_map">
     </iframe>
+    </div>
+    
     <div class="container_wrap">
         <div id="container">
             <div class="margin">
