--- a/menu2_page.html
+++ b/menu2_page.html
@@ -15,12 +15,62 @@
     <script src="js/jquery-3.4.1.min.js"></script>
     <script src="js/script.js"></script>
     <link rel="stylesheet" href="css/footer.css">
+    
     <!-- 웹폰트 링크 넣기 -->
 </head>
 
 <body>
     <header>
-        <iframe src="header.html" frameborder="0" scrolling="no"></iframe>
+        <div id="top">
+            <div class="logo">
+                <a href="index.html"><img src="images/main/top/dodonut_symbol.svg" alt=""></a>
+            </div>
+            <ul class="gnb">
+                <li>
+                    <a href="adout.html">
+                        <div class="img_wrap"><img src="images/main/top/btn_about.svg" alt=""></div>
+                        <p>about</p>
+                    </a>
+                </li>
+                <li>
+                    <a href="menu_1.html">
+                        <div class="img_wrap"><img src="images/main/top/btn_menu.svg" alt=""></div>
+                        <p>menu</p>
+                    </a>
+                </li>
+                <li>
+                    <a href="location.html">
+                        <div class="img_wrap"><img src="images/main/top/btn_location.svg" alt=""></div>
+                        <p>location</p>
+                    </a>
+                </li>
+                <li>
+                    <a href="goods.html">
+                        <div class="img_wrap"><img src="images/main/top/btn_goods.svg" alt=""></div>
+                        <p>goods</p>
+                    </a>
+                </li>
+                <li>
+                    <a href="#">
+                        <div class="img_wrap"><img src="images/main/top/btn_login.svg" alt=""></div>
+                        <p>login</p>
+                    </a>
+                </li>
+    
+                <li>
+                    <a href="#">
+                        <div class="img_wrap"><img src="images/main/top/btn_mypage.svg" alt=""></div>
+                        <p>mypage</p>
+                    </a>
+                </li>
+                <li>
+                    <a href="#">
+                        <div class="img_wrap"><img src="images/main/top/btn_search.svg" alt=""></div>
+                        <p>search</p>
+                    </a>
+                </li>
+            </ul>
+        </div>
     </header>
     <div id="container_wrap">
         <div id="container">
