--- a/adout.html
+++ b/adout.html
@@ -77,11 +77,7 @@
         </div>
     </header>
     <div id="video_wrap">
-        <div class="video">
-            <p>세상에서 가장 맛있고<br>
-                귀여운 도넛 브랜드<br>
-                DODONUT</p>
-        </div>
+        <video src="media/dodonut_video.mp4" autoplay muted loop></video>
     </div>
     <div id="comtainer">
         <div class="section_a">
